<resources>
    <string name="app_name">Walk &amp; Fight</string>
    <string name="game_view_content_description" translatable="false">Game view</string>
    <string name="main_startMsgText">Start your adventure now! Sign in for free!</string>
    <string name="main_logoText">Walk &amp; Fight</string>
    <string name="main_skip_signin">Try it!</string>

    <string name="initmenu_startadventuremenu">Start adventure</string>
    <string name="initmenu_resumeadventuremenu">Resume adventure</string>
    <string name="initmenu_mystatisticsmenu">My statistics</string>

    <string name="ranking_rankingText">RANKING</string>
    <string name="ranking_points">points</string>

    <string name="winner_boss_winnerBoss">Congrats!</string>
    <string name="winner_boss_sharewithfriends">Share with friends</string>

    <string name="boss_fight_statistics">Boss Fight Statistics</string>
    <string name="fight_statistics">Fight Statistics</string>

    <string name="fight_statistics_ultimates">Ultimates</string>
    <string name="fight_statistics_enemy_attacks">Enemy attacks</string>
    <string name="fight_statistics_score">Score</string>

    <string name="osm_fight_button">Fight!</string>
    <string name="osm_navigate_button">Navigate </string>
    <string name="osm_no_navigate_button">Unlock </string>

    <string name="current_location_marker_snipped">Let\'s make magic!</string>
    <string name="next_point_location_marker_title">Goblin</string>
    <string name="next_point_location_marker_snipped">You can\'t beat me!</string>

    <string name="loser_boss_loser">Defeat</string>

    <string name="loser_boss_sharewithfriends">Share with friends</string>
    <string name="loser_boss_nextwaypoint">Next Waypoint</string>
    <string name="loser_boss_tryfightagain">Try Fight Again</string>

    <string name="winner_waypoint_winner">Victory!</string>
    <string name="winner_waypoint_nextwaypoint">Next Waypoint</string>

    <string name="loser_waypoint_loser">Defeat</string>
    <string name="loser_waypoint_sharewithfriends">Share with friends</string>
    <string name="loser_waypoint_nextwaypoint">Next Waypoint</string>

    <string name="mystats_stadistics">Statistics</string>
    <string name="mystats_stadisticalInformation">Statistical Information</string>
    <string name="mystats_globalrankingmenu">Global Ranking</string>


    <string name="exit_confirmation">Are you sure to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mainmenu">Main Menu</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="google_sign_in_failed">Error login with Google, please contact an administrator</string>
    <string name="firebase_error">Error login with Firebase, please contact an administrator</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Player</string>
    <string name="email">Email</string>
    <string name="email_placeholder">example@email.com</string>
    <string name="save">Save</string>
    <string name="zero_value">0</string>
    <string name="points">%1$s pts</string>
    <string name="enemies_defeated">Enemies defeated</string>
    <string name="bosses_defeated">Bosses defeated</string>
    <string name="score">Score</string>
    <string name="time_played">Time played</string>
    <string name="fight">Fight!</string>
    <string name="support_text">You shouldn\'t see this screen, please contact with support team at: support@judc.com</string>

    <string name="player_score">#%1$d %2$s - %3$d pts</string>
</resources>