<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/material_dynamic_neutral20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile"
            android:textSize="48sp"
            android:textColor="@color/red_custom"
            android:textStyle="bold"
            android:layout_marginEnd="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100sp"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textIsSelectable="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

        <EditText
            android:id="@+id/profile_username_value"
            android:textAlignment="center"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/username_placeholder"
            android:maxLines="1"
            android:maxWidth="170dp"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textIsSelectable="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/profile_email_value"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_width="170dp"
            android:maxWidth="170dp"
            android:maxHeight="25dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:layout_height="wrap_content"
            android:text="@string/email_placeholder"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="250sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile_button_save"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:background="@drawable/button"/>


    </LinearLayout>

</LinearLayout>