<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/material_dynamic_neutral20"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_adventure_menu"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:background="@drawable/button"
        android:text="@string/initmenu_startadventuremenu"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/resume_adventure_menu"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/initmenu_resumeadventuremenu"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/my_statistics_menu"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/initmenu_mystatisticsmenu"
        android:textColor="@color/black"
        android:textSize="25sp" />
</LinearLayout>