<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mystats_stadistics"
            android:textSize="48sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginEnd="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:text="@string/enemies_defeated"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/statistics_enemies_defeated_value"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/zero_value"
            android:ellipsize="end"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="25sp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:text="@string/bosses_defeated"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/statistics_bosses_defeated_value"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:text="@string/zero_value"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="25sp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="10sp"

        android:layout_marginBottom="100sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/statistics_score_value"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/zero_value"
            android:ellipsize="end"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/global_ranking_menu"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="86dp"
        android:background="@drawable/button"
        android:text="@string/mystats_globalrankingmenu"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/mainmenu"
        android:textColor="@color/black" />

</LinearLayout>
